# icloud-mcp

./: .env.example  .gitignore  .mcpbignore  .vercelignore  LICENSE  README.md  app.py  claude-project-instructions.md  manifest.json  pyproject.toml
api/: index.py
docs/: chatgpt-remote.md
scripts/: preflight.py  smoke.py  smoke_mail.py
src/icloud_mcp/: __init__.py  config.py  errors.py  oauth.py  server.py  util.py
src/icloud_mcp/calendar/: __init__.py  client.py  models.py  tools.py
src/icloud_mcp/contacts/: __init__.py  client.py  models.py  tools.py
src/icloud_mcp/mail/: __init__.py  client.py  models.py  tools.py
src/icloud_mcp/workflows/: __init__.py  tools.py
tests/: test_calendar.py  test_contacts.py  test_mail.py  test_workflows.py
