[project]
name = "icloud-mcp"
version = "0.7.0"
description = "MCP server exposing iCloud Calendar, Mail, and Contacts"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2",
    "caldav>=1.3",
    "icalendar>=5.0",
    "imap-tools>=1.5",
    "niquests>=3.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.scripts]
icloud-mcp = "icloud_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icloud_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
